ignoring problematic files

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/Database Management System/FileContentIndex/18b39b9b-85cf-43c3-83bf-1a29cb137c0e.vsidx
+/.vs/Database Management System/FileContentIndex
